# clion

./: CLEAN_DISPLAY_DEMO.md  CMakeLists.txt  CMakeLists_modular.txt  Compilation_Fix_Guide.md  FaceProcessor.cpp  FaceProcessor.h  OCCHandler.cpp  OCCHandler.h  OCCHandler_AdvancedRepair.cpp  OCCHandler_Core.cpp  OCCHandler_FaceProcessing.cpp  OCCHandler_Modularization_Guide.md  OCCHandler_Occlusion.cpp  OCCHandler_Repair.cpp  OCCHandler_ShapeAnalysis.cpp  OCCHandler_Visualization.cpp  OCCHandler_modules.cmake  PARTIAL_OCCLUSION_HANDLING.md  PATH_LENGTH_DIAGNOSIS.md  PATH_LENGTH_FILTERING.md  PATH_LENGTH_SOLUTION_GUIDE.md  PATH_SEGMENTATION_FEATURE.md  SURFACE_VISIBILITY_ANALYSIS.md  SprayR_GUI.cpp  SprayR_GUI.h  TRAJECTORY_INTEGRATION_README.md  VTKViewer.cpp  VTKViewer.h  Z_DIRECTION_OCCLUSION_DETECTION.md  auto_repair_summary.md  enhanced_repair_guide.md  face_segmentation_demo.cpp  improved_face_visibility.cpp  main.cpp  path_length_test_simple.cpp  run_demo.bat  run_demoR.bat  test_compiler.cpp  test_correct_flow.cpp  test_modular_occhandler.cpp  (+2 more)
